--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <p><strong>Actions:</strong>
                             <ul>
                                 <li>Executed manual test cases for various modules of the platform.</li>
-                                <li>Performed functional, usability, and regression testing.</li>
+                                <li>Performed Functional, Integration, Smoke, Adhoc, Usability, Regression and Acceptance testing.</li>
                                 <li>Logged, tracked, and verified bug fixes using defect tracking tools.</li>
                                 <li>Developed and maintained test documentation, including test plans and test cases.</li>
                             </ul>
@@ -148,12 +148,12 @@
                     <div class="skill-category card animate-on-scroll">
                         <h3><i class="fas fa-tasks icon-left"></i>Manual Testing & QA Process</h3>
                         <ul>
-                            <li>Manual Testing</li>
-                            <li>Test Case Design</li>
-                            <li>Test Scenario Creation</li>
+                            <li>Blackbox Testing Concept</li>
+                            <li>SDLC Concepts</li>
+                            <li>STLC</li>
                             <li>Defect Tracking & Management</li>
-                            <li>Functional Testing</li>
-                            <li>Regression Testing</li>
+                            <li>Test Case Design</li>
+                            <li>Test Scenario</li>
                             <li>Web Application Testing</li>
                             <li>Mobile Application Testing</li>
                         </ul>
